# curamentorworker

./: .gitignore  README.md  dotenv.env  pyproject.toml  requirements.txt
curamentorworker/: __init__.py  __main__.py  config.py  logger.py  processor.py  queue.py  s3_utils.py
tests/: test_processor_prefix.py
